--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".NewPasswordActivity">
+        </activity>
+        <activity android:name=".LoginActivity">
+        </activity>
         <activity android:name=".FifthActivity">
         </activity>
         <activity android:name=".FourthActivity">
